--- a/_posts/2025-05-02-test.markdown
+++ b/_posts/2025-05-02-test.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Welcome to Jekyll!"
+title:  "test me baby"
 date:   2025-05-02 17:25:25 +1000
 categories: jekyll update
 ---
